# windows_syscalls

./: CMakeLists.txt
src/: CMakeLists.txt
src/display_volume_information/: CMakeLists.txt  display_volume_information.cpp
src/display_volume_paths/: CMakeLists.txt  display_volume_paths.cpp
src/enumerate_network_resources/: CMakeLists.txt  enumerate_network_resources.cpp
src/enumerate_network_shares/: CMakeLists.txt  enumerate_network_shares.cpp
src/enumerate_volume_guid_paths/: CMakeLists.txt  enumerate_volume_guid_paths.cpp
src/enumerate_volume_mount_points/: CMakeLists.txt  enumerate_volume_mount_points.cpp
src/get_volume_name/: CMakeLists.txt  get_volume_name.cpp
src/get_volume_name_for_volume_mount_point/: CMakeLists.txt  get_volume_name_for_volume_mount_point.cpp
