add_subdirectory(display_volume_information)

add_subdirectory(display_volume_paths)

add_subdirectory(enumerate_network_resources)

add_subdirectory(enumerate_network_shares)

add_subdirectory(enumerate_volume_guid_paths)

add_subdirectory(get_volume_name)

add_subdirectory(enumerate_volume_mount_points)